# TenseOracle

./: .env  .gitignore  ReadMe.md  execute.sh  main.py  pyproject.toml  requirements.txt  slurm.sh
Configs/: debug.json  standard.json
Configs/Tasks/: ag_news.json  bank77.json  dbpedia.json  fnc_one.json  imdb.json  mnli.json  qnli.json  rotten_tomatoes.json  sst2.json  trec.json  trec_coarse.json  wiki_talk.json  yelp.json
GithubRunner/: create_job.py  master.sh  masterx.sh  start_job.sh  start_jobx.sh
GithubRunner/job_templates/: gpu.sh  standard-gpu.sh  standard.sh
Strategies/: AE_filters.py  LE_filters.py  __init__.py  acquisition_functions.py  dsm_filters.py  filters.py  other_filters.py  sklean_filters.py  sklearn_filters.py
ThoroughOracle-Scripts/: find_missing_standards.ipynb  missing_std_experiments.csv  rainbow_analysis.ipynb  simple_evaluation.ipynb  simple_evaluation2.ipynb  test.json
Utilities/: active_learning.py  comet.py  evaluation.py  general.py  parsers.py  preprocessing.py
small_text/: __init__.py  active_learner.py  base.py  exceptions.py  version.py
small_text/classifiers/: __init__.py  classification.py  factories.py
small_text/data/: __init__.py  datasets.py  sampling.py
small_text/initialization/: __init__.py  strategies.py
small_text/query_strategies/: __init__.py  bayesian.py  coresets.py  multi_label.py  strategies.py
small_text/stopping_criteria/: __init__.py  base.py  change.py  kappa.py  uncertainty.py  utility.py
small_text/training/: __init__.py  early_stopping.py  metrics.py  model_selection.py
(+31 files in other folders)
